<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/rates_fragment_dest">

    <fragment
        android:id="@+id/rates_fragment_dest"
        android:name="com.shannan.converter.rates.RatesFragment"
        android:label="@string/app_name">

        <action
            android:id="@+id/action_ratesFragment_to_rateConverterFragment"
            app:destination="@id/rate_converter_fragment_dest" />
    </fragment>

    <fragment
        android:id="@+id/rate_converter_fragment_dest"
        android:name="com.shannan.converter.rateconverter.RateConverterFragment"
        android:label="Rate Converter">
        <argument
            android:name="currency"
            app:argType="string" />
        <action
            android:id="@+id/action_rateConverterFragment_to_ratesFragment"
            app:destination="@id/rates_fragment_dest" />
    </fragment>



</navigation>
